<resources>
    <string name="app_name">Patient</string>
    <string name="err_name">Enter Corret Name</string>
    <string name="err_tel">Enter Correct Phone Number</string>
    <string name="err_email">Enter Correct Email Address</string>
    <string name="err_password">Password doesn\'t Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_in">Sign In</string>
    <string name="Success">SUCCESS</string>
    <string name="Loading">Loading</string>



    <string name="welcomepatient">WELCOME PATIENT</string>
    <string name="emailaddr">Email address</string>
    <string name="password">Password</string>
    <string name="forgot">Forget Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="newuser">New User?</string>
     <string name="register">REGISTER</string>


    <string name="registerpage">REGISTRATION PAGE</string>
    <string name="fullname">Enter your full name</string>
    <string name="email">Enter Email Address</string>
    <string name="mobilenumber">Enter Mobile Number</string>
    <string name="age">Enter your age</string>
    <string name="repass">Re-enter Password</string>
    <string name="choosegender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">PICK DOB</string>
    <string name="fulladdr">Enter your full address</string>
    <string name="gotologin">Already a User? Login</string>


    <string name="logginin">Logging in</string>
    <string name="plsenter">Please Enter details</string>
    <string name="loginsucc">Login Successful</string>
    <string name="invalidcre">Invalid Credentials</string>
    <string name="authfailed">Authentication Failed</string>


    <string name="greet">Hello,</string>

    <string name="entsympt">Enter Your Symptoms !</string>
    <string name="preddis">Predicted Disease is:</string>
    <string name="knowdis">KNOW YOUR DISEASE</string>

    <string name="selsymtoms">SELECT SYMPTOMS</string>







    <string-array name="DoctorSearch">

        <item>Please select the category to search</item>
        <item>Name</item>
        <item>Mobile</item>
        <item>Email</item>
        <item>Location</item>
        <item>Speciality</item>
    </string-array>

    <string-array name="symptom_list">
        <item>@string/selsymtoms</item>
        <item>abdominal_pain</item>
        <item>abnormal_menstruation</item>
        <item>acidity</item>
        <item>acute_liver_failure</item>
        <item>altered_sensorium</item>
        <item>anxiety</item>
        <item>back_pain</item>
        <item>belly_pain</item>
        <item>blackheads</item>
        <item>bladder_discomfort</item>
        <item>blister</item>
        <item>blood_in_sputum</item>
        <item>bloody_stool</item>
        <item>blurred_and_distorted_vision</item>
        <item>breathlessness</item>
        <item>brittle_nails</item>
        <item>bruising</item>
        <item>burning_micturition</item>
        <item>chest_pain</item>
        <item>chills</item>
        <item>cold_hands_and_feets</item>
        <item>coma</item>
        <item>congestion</item>
        <item>constipation</item>
        <item>continuous_feel_of_urine</item>
        <item>continuous_sneezing</item>
        <item>cough</item>
        <item>cramps</item>
        <item>dark_urine</item>
        <item>dehydration</item>
        <item>depression</item>
        <item>diarrhoea</item>
        <item>dischromic _patches</item>
        <item>distention_of_abdomen</item>
        <item>dizziness</item>
        <item>drying_and_tingling_lips</item>
        <item>enlarged_thyroid</item>
        <item>excessive_hunger</item>
        <item>extra_marital_contacts</item>
        <item>family_history</item>
        <item>fast_heart_rate</item>
        <item>fatigue</item>
        <item>fluid_overload</item>
        <item>fluid_overload.1</item>
        <item>foul_smell_of urine</item>
        <item>headache</item>
        <item>high_fever</item>
        <item>hip_joint_pain</item>
        <item>history_of_alcohol_consumption</item>
        <item>increased_appetite</item>
        <item>indigestion</item>
        <item>inflammatory_nails</item>
        <item>internal_itching</item>
        <item>irregular_sugar_level</item>
        <item>irritability</item>
        <item>irritation_in_anus</item>
        <item>itching</item>
        <item>joint_pain</item>
        <item>knee_pain</item>
        <item>lack_of_concentration</item>
        <item>lethargy</item>
        <item>loss_of_appetite</item>
        <item>loss_of_balance</item>
        <item>loss_of_smell</item>
        <item>malaise</item>
        <item>mild_fever</item>
        <item>mood_swings</item>
        <item>movement_stiffness</item>
        <item>mucoid_sputum</item>
        <item>muscle_pain</item>
        <item>muscle_wasting</item>
        <item>muscle_weakness</item>
        <item>nausea</item>
        <item>neck_pain</item>
        <item>nodal_skin_eruptions</item>
        <item>obesity</item>
        <item>pain_behind_the_eyes</item>
        <item>pain_during_bowel_movements</item>
        <item>pain_in_anal_region</item>
        <item>painful_walking</item>
        <item>palpitations</item>
        <item>passage_of_gases</item>
        <item>patches_in_throat</item>
        <item>phlegm</item>
        <item>polyuria</item>
        <item>prominent_veins_on_calf</item>
        <item>puffy_face_and_eyes</item>
        <item>pus_filled_pimples</item>
        <item>receiving_blood_transfusion</item>
        <item>receiving_unsterile_injections</item>
        <item>red_sore_around_nose</item>
        <item>red_spots_over_body</item>
        <item>redness_of_eyes</item>
        <item>restlessness</item>
        <item>runny_nose</item>
        <item>rusty_sputum</item>
        <item>scurring</item>
        <item>shivering</item>
        <item>silver_like_dusting</item>
        <item>sinus_pressure</item>
        <item>skin_peeling</item>
        <item>skin_rash</item>
        <item>slurred_speech</item>
        <item>small_dents_in_nails</item>
        <item>spinning_movements</item>
        <item>spotting_ urination</item>
        <item>stiff_neck</item>
        <item>stomach_bleeding</item>
        <item>stomach_pain</item>
        <item>sunken_eyes</item>
        <item>sweating</item>
        <item>swelled_lymph_nodes</item>
        <item>swelling_joints</item>
        <item>swelling_of_stomach</item>
        <item>swollen_blood_vessels</item>
        <item>swollen_extremeties</item>
        <item>swollen_legs</item>
        <item>throat_irritation</item>
        <item>toxic_look_(typhos)</item>
        <item>ulcers_on_tongue</item>
        <item>unsteadiness</item>
        <item>visual_disturbances</item>
        <item>vomiting</item>
        <item>watering_from_eyes</item>
        <item>weakness_in_limbs</item>
        <item>weakness_of_one_body_side</item>
        <item>weight_gain</item>
        <item>weight_loss</item>
        <item>yellow_crust_ooze</item>
        <item>yellow_urine</item>
        <item>yellowing_of_eyes</item>
        <item>yellowish_skin</item>
    </string-array>

    <string name="key">AIzaSyA8DyocSnuDjJjLX5AjbQK0lY3_Ar_Db-k</string>
</resources>