<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistration"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerpage"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#0352DA"
        android:textStyle="bold"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:textSize="20sp"
        android:id="@+id/fullName"
        android:layout_marginTop="10dp"
        android:textColorHint="#27A611"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailaddr"
        android:textSize="20sp"
        android:id="@+id/emailAddress"
        android:layout_marginTop="10dp"
        android:textColorHint="#27A611"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobilenumber"
        android:textSize="20sp"
        android:id="@+id/mobileNum"
        android:layout_marginTop="10dp"
        android:textColorHint="#27A611"
        android:inputType="phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="20sp"
        android:id="@+id/age"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:textColorHint="#27A611"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:id="@+id/passWord"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textColorHint="#27A611"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repass"
        android:textSize="20sp"
        android:id="@+id/rePassword"
        android:layout_marginTop="10dp"
        android:textColorHint="#27A611"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosegender"
        android:textSize="20sp"
        android:textColor="#27A611"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/genderid">

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/male"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/female"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:background="#00EEB6"
        android:textAlignment="gravity"
        android:layout_marginTop="20dp"
        android:onClick="dobpicker"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dob"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fulladdr"
        android:textColorHint="#27A611"
        android:layout_marginTop="20dp"
        android:id="@+id/locationaddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="#00EEB6"
        android:textAlignment="gravity"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:id="@+id/patientRegister"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotologin"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="gotoMainPage"/>

</LinearLayout>